avro_derive/tests/ui/avro_rs_373_field_rename.stderr
warning: `#[avro(rename = "..")]` is deprecated
 --> tests/ui/avro_rs_373_field_rename.rs:5:5
  |
5 | /     #[avro(rename = "c")]
6 | |     a: String,
  | |_____________^
  |
  = help: Use `#[serde(rename = "..")]` instead

error: `#[avro(rename = "..")]` must match `#[serde(rename = "..")]`, it's also deprecated. Please use only `#[serde(rename  = "..")]`
 --> tests/ui/avro_rs_373_field_rename.rs:5:5
  |
5 | /     #[avro(rename = "c")]
6 | |     a: String,
  | |_____________^
