avro_derive/tests/ui/avro_rs_373_field_rename.rs
use apache_avro::AvroSchema;

#[derive(AvroSchema)]
struct Foo {
    #[avro(rename = "c")]
    a: String,
    b: i32,
}

pub fn main() {}
